--- a/HelloWorldService/HelloWorldLambda/HelloWorldLambda.csproj
+++ b/HelloWorldService/HelloWorldLambda/HelloWorldLambda.csproj
@@ -15,5 +15,6 @@
     <PackageReference Include="Amazon.Lambda.RuntimeSupport" Version="1.8.7" />
     <PackageReference Include="Amazon.Lambda.Core" Version="2.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.3.1" />
+    <PackageReference Include="AWSSDK.SecretsManager" Version="3.7.0" />
   </ItemGroup>
 </Project>
